Remove file system provided Reader and Writer ()
* Remove file system provided Reader and Writer

Before this PR it was possible to obtain Reader or Writer instances from
file system abstraction to perform desired operations. While being convenient and familiar
to some users it's problematic since those writers/readers will use uncontrollable
buffers to perform their operations.
Previously goal was only to keep those methods only for test code but that did not age that well.
This PR removes the ability to get those interfaces from file system abstraction and instead
provides helpers to perform writes and reads using available storeChannels.

* Fix tests:
 - return empty string when try to read file that does not exist
 - empty migration status if no records exist yet

* Fix tests:
 - return null when try to read file that does not exist
 - empty migration status if no records exist yet

* Format code

Co-authored-by: Agent Smith <103414894+neo4jagentsmith[bot]@users.noreply.github.com>